--- a/src/app/home/SatelliteSettings/SatelliteSettings.component.html
+++ b/src/app/home/SatelliteSettings/SatelliteSettings.component.html
@@ -11,7 +11,7 @@
                         <label class="clr-col-3"> Satellite data directory:
                             <button class="btn btn-outline" (click)="openDirectoryDialog()">select</button>
                         </label>
-                        <input clrInput type="text" class="clr-col-9" placeholder="Select satellite data directory path" [(ngModel)]="satelliteSettings.scidapRoot" name="scidapRoot" required />
+                        <input clrInput type="text" class="clr-col-9" placeholder="Select satellite data directory path" [(ngModel)]="satelliteSettings.systemRoot" name="systemRoot" required />
                         <clr-control-helper>Please choose satellite's data directory. Where all analysis results will be stored.</clr-control-helper>
                         <clr-control-error></clr-control-error>
                     </clr-input-container>
