--- a/src/app/home/SatelliteSettings/SatelliteSettings.component.html
+++ b/src/app/home/SatelliteSettings/SatelliteSettings.component.html
@@ -88,25 +88,34 @@
                         <clr-control-error></clr-control-error>
                     </clr-input-container>
 
-                    <clr-input-container>
+                    <clr-checkbox-container>
+                        <label class="clr-col-3"> Enable SSL: </label>
+                        <clr-checkbox-wrapper>
+                            <input type="checkbox" class="clr-col-9" clrCheckbox [(ngModel)]="satelliteSettings.enableSSL" name="enableSSL" />
+                        </clr-checkbox-wrapper>
+                        <clr-control-helper>Enabling this module will allow to use SSL encryption</clr-control-helper>
+                        <clr-control-error></clr-control-error>
+                    </clr-checkbox-container>
+
+                    <!-- <clr-input-container>
                         <label class="clr-col-3"> Satellite SSL cert: &nbsp;&nbsp;
                             <button class="btn btn-outline" (click)="openCertDialog(1)">select cert</button>
                         </label>
                         <input clrInput type="text" class="clr-col-9" placeholder="" [(ngModel)]="satelliteSettings.sslCert" name="sslCert" />
                         <clr-control-helper>Path to satellite's SSL certificate.</clr-control-helper>
                         <clr-control-error></clr-control-error>
-                    </clr-input-container>
+                    </clr-input-container> -->
 
-                    <clr-input-container>
+                    <!-- <clr-input-container>
                         <label class="clr-col-3"> Satellite SSL key:
                             &nbsp;&nbsp; <button class="btn btn-outline" (click)="openCertDialog(2)">select key</button>
                         </label>
                         <input clrInput type="text" class="clr-col-9" placeholder="" [(ngModel)]="satelliteSettings.sslKey" name="sslKey" />
                         <clr-control-helper>Path to satellite's SSL key.</clr-control-helper>
                         <clr-control-error></clr-control-error>
-                    </clr-input-container>
+                    </clr-input-container> -->
 
-                    <clr-input-container>
+                    <!-- <clr-input-container>
                         <label class="clr-col-3"> Satellite SSL listen port:
                             <div style="color: tomato" *ngIf="checkPort(satelliteSettings.scidapSSLPort)">
                                 <clr-icon shape="exclamation-circle"></clr-icon>
@@ -116,7 +125,7 @@
                         <input clrInput type="number" max=65535 min=1000 class="clr-col-9" [(ngModel)]="satelliteSettings.scidapSSLPort" name="scidapSSLPort" required />
                         <clr-control-helper>Satellite service port number to listen on.</clr-control-helper>
                         <clr-control-error></clr-control-error>
-                    </clr-input-container>
+                    </clr-input-container> -->
 
                     <clr-input-container>
                         <label class="clr-col-3"> Airflow's API port:
@@ -154,7 +163,7 @@
                         <clr-control-error></clr-control-error>
                     </clr-input-container>
 
-                    <clr-input-container>
+                    <!-- <clr-input-container>
                         <label class="clr-col-3"> MongoDB service port:
                             <div style="color: tomato" *ngIf="checkPort(satelliteSettings.mongoPort)">
                                 <clr-icon shape="exclamation-circle"></clr-icon>
@@ -164,7 +173,7 @@
                         <input clrInput type="text" max=65535 min=1000 class="clr-col-9" [(ngModel)]="satelliteSettings.mongoPort" name="mongoPort" required />
                         <clr-control-helper>MongoDB service port number to listen on.</clr-control-helper>
                         <clr-control-error></clr-control-error>
-                    </clr-input-container>
+                    </clr-input-container> -->
 
                     <!-- <clr-input-container>
                         <label class="clr-col-3"> API service port:</label>
