--- a/src/app/home/SatelliteSettings/SatelliteSettings.component.html
+++ b/src/app/home/SatelliteSettings/SatelliteSettings.component.html
@@ -57,7 +57,7 @@
                         <label class="clr-col-3"> Temporary data directory:
                             <button class="btn btn-outline" (click)="openDirectoryDialog(2)">select</button>
                         </label>
-                        <input clrInput type="text" class="clr-col-9" placeholder="Select temporary data directory path" [(ngModel)]="airflowSettings.cwl__tmp_folder" name="airflow" required />
+                        <input clrInput type="text" class="clr-col-9" placeholder="Select temporary data directory path" [(ngModel)]="airflowSettings.cwl__tmp_folder" name="cwl__tmp_folder" required />
                         <clr-control-helper>Please choose data directory to store temporary data.</clr-control-helper>
                         <clr-control-error></clr-control-error>
                     </clr-input-container>
@@ -84,6 +84,30 @@
                         </label>
                         <input clrInput type="text" class="clr-col-9" placeholder="SERVER:PORT" [(ngModel)]="satelliteSettings.rcServer" name="rcServer" required />
                         <clr-control-helper>URL to API-Sync to configure connection to the production or development server</clr-control-helper>
+                        <clr-control-error></clr-control-error>
+                    </clr-input-container>
+
+                    <clr-input-container>
+                        <label class="clr-col-3"> Global parallelism:
+                        </label>
+                        <input clrInput type="number" min=1 class="clr-col-9" placeholder="POSITIVE INTEGER" [(ngModel)]="airflowSettings.core__parallelism" name="core__parallelism" required />
+                        <clr-control-helper>The maximum number of steps/tasks allowed to run simultaneously for all workflows</clr-control-helper>
+                        <clr-control-error></clr-control-error>
+                    </clr-input-container>
+
+                    <clr-input-container>
+                        <label class="clr-col-3"> Task concurrency:
+                        </label>
+                        <input clrInput type="number" min=1 class="clr-col-9" placeholder="POSITIVE INTEGER" [(ngModel)]="airflowSettings.core__dag_concurrency" name="core__dag_concurrency" required />
+                        <clr-control-helper>The maximum number of steps/tasks allowed to run simultaneously per workflow</clr-control-helper>
+                        <clr-control-error></clr-control-error>
+                    </clr-input-container>
+
+                    <clr-input-container>
+                        <label class="clr-col-3"> Workflow concurrency:
+                        </label>
+                        <input clrInput type="number" min=1 class="clr-col-9" placeholder="POSITIVE INTEGER" [(ngModel)]="airflowSettings.core__max_active_runs_per_dag" name="core__max_active_runs_per_dag" required />
+                        <clr-control-helper>The maximum number of workflows of the same type allowed to run simultaneously</clr-control-helper>
                         <clr-control-error></clr-control-error>
                     </clr-input-container>
 
