Add DockerStatsComponent component, collect scaled CPU usage from Docker

--- a/src/app/home/Dashboard/Dashboard.component.html
+++ b/src/app/home/Dashboard/Dashboard.component.html
@@ -26,6 +26,10 @@
     </div>
   </div>
 
+  <!-- <div *ngIf="isDockerUp" class="clr-col-xl-6 clr-col-12">
+    <docker-stats [stats]="dockerMonit"></docker-stats>
+  </div> -->
+
   <div class="clr-col-xl-6 clr-col-12">&nbsp;</div>
 </div>
 
