--- a/src/app/shared/components/docker-stats/docker-stats.component.html
+++ b/src/app/shared/components/docker-stats/docker-stats.component.html
@@ -1,5 +1,9 @@
 <div class="card">
     <div class="card-block">
+        <span style="white-space: nowrap;">
+            <clr-icon shape="container-volume" size="16" class="is-success"></clr-icon>
+            Docker
+        </span>
         <div class="clr-row">
             <div class="clr-col-8" id="memUsageMB"></div>
             <div class="clr-col-4" id="memCpuUsagePerc"></div>
