Hide Satellite public url settings from UI
It's deprecated setting

--- a/src/app/home/SatelliteSettings/SatelliteSettings.component.html
+++ b/src/app/home/SatelliteSettings/SatelliteSettings.component.html
@@ -68,13 +68,13 @@
                         <clr-control-error></clr-control-error>
                     </clr-input-container>
 
-                    <clr-input-container>
+                    <!-- <clr-input-container>
                         <label class="clr-col-3"> Satellite public url:
                         </label>
                         <input clrInput type="text" class="clr-col-9" placeholder="https://127.0.0.1:3070/" [(ngModel)]="satelliteSettings.baseUrl" name="baseUrl" required />
                         <clr-control-helper>URL to satellite that can be accessed from other computers. By default just local computer can access.</clr-control-helper>
                         <clr-control-error></clr-control-error>
-                    </clr-input-container>
+                    </clr-input-container> -->
 
                     <clr-input-container>
                         <label class="clr-col-3"> API-Sync url:
